# obsidian-ai-journal

./: .gitignore  INSTALL_LAUNCHAGENT.md  LICENSE  README.md  com.journal.watcher.plist.template  config.py  daily.md  generate_weekly.py  ingest_context.py  pyproject.toml  requirements.txt  test_components.py  watch_vault.py
