[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llama-index>=0.14.7",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-retrievers-bm25>=0.6.5",
    "ollama>=0.6.0",
    "watchdog>=6.0.0",
]
